# Server-Spring2022

./: .gcloudignore  .gitignore  CMakeLists.txt  README.md  server_config  test_config
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
files/: file1.txt  index.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/pages/: create.js  list.js
frontend/src/utils/: url.js
include/: api_handler.h  api_handler_factory.h  config_parser.h  echo_handler.h  echo_handler_factory.h  error_handler.h  error_handler_factory.h  fake_file_system.h  file_system.h  logger.h  mime_types.h  palette_api.h  real_file_system.h  request_handler.h  request_handler_delegate.h  request_handler_factory.h  server.h  session.h  sleep_handler.h  sleep_handler_factory.h  static_handler.h  static_handler_factory.h
include/request_handler/: api_handler.h  bad_request_handler.h  color_handler.h  echo_handler.h  error_handler.h  health_handler.h  palette_handler.h  request_handler.h  sleep_handler.h  static_handler.h
include/request_handler_factory/: api_handler_factory.h  bad_request_handler_factory.h  color_handler_factory.h  echo_handler_factory.h  error_handler_factory.h  health_handler_factory.h  palette_handler_factory.h  request_handler_factory.h  sleep_handler_factory.h  static_handler_factory.h
src/: api_handler.cc  api_handler_factory.cc  config_parser.cc  echo_handler.cc  echo_handler_factory.cc  error_handler.cc  error_handler_factory.cc  fake_file_system.cc  file_system.cc  header_handler.cc  header_handler.h  logger.cc  mime_types.cc  palette_api.cc  real_file_system.cc  request_handler.cc  request_handler_delegate.cc  request_handler_factory.cc  server.cc  server.h  server_main.cc  session.cc  session.h  sleep_handler.cc  sleep_handler_factory.cc  static_handler.cc  static_handler_factory.cc
src/request_handler/: api_handler.cc  bad_request_handler.cc  color_handler.cc  echo_handler.cc  error_handler.cc  health_handler.cc  palette_handler.cc  request_handler.cc  sleep_handler.cc  static_handler.cc
src/request_handler_factory/: api_handler_factory.cc  bad_request_handler_factory.cc  color_handler_factory.cc  echo_handler_factory.cc  error_handler_factory.cc  health_handler_factory.cc  palette_handler_factory.cc  request_handler_factory.cc  sleep_handler_factory.cc  static_handler_factory.cc
tests/: TEST_DOCUMENTATION.md  blockstring_config  comment_config  config_parser_test.cc  emptyblock_config  expected_bad_format  expected_gcp_full  expected_gcp_header  expected_html  expected_local_full  expected_not_found  integration_tests.sh  largePosPort_config  nonNumericPort1_config  nonNumericPort2_config  palette_api_test.cc  request_handler_delegate_test.cc  request_handler_test.cc  server_test.cc  session_test.cc  singleEscape_config  syntax4_config  validBlockPort_config  validStatementPort_config  weird_8080_max_match_config
tests/integration_testcases/: expected_404_request  expected_bad_request  expected_echo  expected_health  expected_jpg  expected_not_found  expected_png  expected_txt  expected_zip
tests/parser_tests/: absolutepath_config  doubleEscape_config  example_8080_config  max_matching_config  negativePort_config  string_config  syntax2_config  syntax3_config  syntax5_config  tokens_config  trailing_slashes_config  whitespace_config
